solc_mutator_ossfuzz_seed_corpus/test_sol/test_bde14ec1d971f302ce23cf0e3e7afc9bf8faca3d2ce896bc0ce23d1ade5e97f9_e43bad8d1654515c286cd14934cc8f5ce00939ab_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
struct St0 {
  uint32 el0;
}
function f0(bool i0)    
{
}

==== Source: su1.sol ====
struct St1 {
  bool el0;
  int248 el1;
  function (function (address[] memory, function (bytes2) internal   returns (int120, address payable, bool), bool) external   returns (string memory, int56), uint48, bytes memory) external   returns (string memory) el2;
  address payable[2] el3;
}
contract C0 {
  bytes  public s0 = bytes("0000000000000000000000000000000000000000000000000000000000000000d94caadd21b2586ffbff96dda2b200676d59b646b2aee0ca");
  uint144[]   s1;
  constructor(uint144[] memory i0) payable  {
    s1 = i0;
    unchecked {
      (bool l0, bytes memory l1) = address(this).call(bytes(string("ffffffffffffffffffffffffffffffffffffffffffffffffffffae6edbb4a9c785c8f31056d9b1")));
      s1.pop();
      (bool l2, bytes memory l3) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffff000000000000000000000000000000000000000000000000"));
    }
  }
  function f1() external virtual  payable
  {
  }
}
error er0(bytes31 ep0);
pragma solidity >= 0.0.0;
// ----
// TypeError 2582: (su1.sol:79-148): Internal type cannot be used for external function type.
